screen (4.1.0~20120320gitdb59704-8) UNRELEASED; urgency=low

  * Update debian/patches/13split_info_files.patch to change now ambiguous
    makeinfo option --split to --split-size. Fixes FTBFS with texinfo 5.x.
    (Closes: #707530)
  * Use doc/screen.info* instead of listing every file indiviually in
    debian/info.
  * Apply wrap-and-sort.

 -- Axel Beckert <abe@debian.org>  Thu, 16 May 2013 03:15:42 +0200

screen (4.1.0~20120320gitdb59704-7) unstable; urgency=low

  * Extend 60-644788-screen-4.1.0-4.0.3-interoperability.patch:
    + Add support for detaching (Closes: #684342)
    + Document remaining issues in debian/NEWS

 -- Axel Beckert <abe@debian.org>  Sun, 16 Sep 2012 13:42:12 +0200

screen (4.1.0~20120320gitdb59704-6) unstable; urgency=low

  * Apply patch by Julien Cristau <jcristau@debian.org> to add 4.0.3
    interoperability. (Closes: #683228; fixing the issue properly instead
    of working around it. Thanks!)
    + Drop all debconf handling and translations of debconf templates
      (Closes: #679747, #683227; Thanks Beatrice Torracca and Christian
      Perrier!)
    + Drop build-depends on po-debconf and pre-depends on debconf
    + Drop debian/NEWS (Closes: #678950)
    + Remove no more necessary lintian override
  * Screen's info pages are now split over more files than before. Also
    include the new file doc/screen.info-6 (Closes: #682283)

 -- Axel Beckert <abe@debian.org>  Tue, 07 Aug 2012 08:54:42 +0200

screen (4.1.0~20120320gitdb59704-5) unstable; urgency=low

  * Disable patch 52fix_screen_utf8_nfd.patch since it introduced a
    regression (Closes: #677512, Reopens: #600246)
  * Fix bug number of Slovak debconf translation in
    4.1.0~20120320gitdb59704-3 changelog entry
  * Use GMANE URLs for refering to upstream discussions as lists.gnu.org
    doesn't support threading over month boundaries. (Thanks Evgeni
    Golov!)
  * Add translations of debconf templates:
    + Romanian (Closes: #679366; Thanks Andrei POPESCU!)