@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Axel Beckert <abe@debian.org>
 Uploaders: Jan Christoph Nordholz <hesso@pool.math.tu-berlin.de>
 Standards-Version: 3.9.3
-Build-Depends: debhelper (>> 7),
+Build-Depends: debhelper (>= 9~),
                dh-autoreconf,
                dpkg-dev (>= 1.16.1~),
                libncursesw5-dev,
